force-app/main/default/objects/Location__c/Location__c.object-meta.xml
<CustomObject>
    <label>Location (NWFB)</label>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations (NWFB)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>