force-app/main/default/objects/Location__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <formula>Street__c + &apos;, &apos; 
+ City__c + &apos;, &apos; + State__c + &apos;, &apos; + PostalCode__c + &apos;.&apos;</formula>
    <label>Address</label>
    <type>Text</type>
</CustomField>