force-app/main/default/objects/Location__c/fields/LocationEmail__c.field-meta.xml
<CustomField>
    <fullName>LocationEmail__c</fullName>
    <label>Location Email</label>
    <type>Email</type>
</CustomField>