force-app/main/default/objects/Location__c/fields/RedirectPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>RedirectPhoneNumber__c</fullName>
    <label>Redirect Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>