force-app/main/default/objects/Location__c/fields/Show_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Show_on_Website__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show on Website</label>
    <type>Checkbox</type>
</CustomField>