force-app/main/default/objects/Location__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <inlineHelpText>Enter the tax rate percentage (eg 10.5)</inlineHelpText>
    <label>TaxRate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>