force-app/main/default/objects/Location__c/fields/TotalTaxableAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalTaxableAmount__c</fullName>
    <label>Total Taxable Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>