force-app/main/default/objects/Location__c/fields/TwilioPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>TwilioPhoneNumber__c</fullName>
    <label>Twilio Phone Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>